--- a/src/assets/styles/helpers/helpers.scss
+++ b/src/assets/styles/helpers/helpers.scss
@@ -42,17 +42,14 @@ $breakpoint-xl: 1680px;
 $breakpoint-xxl: 1920px;
 
 // color vars
-$color-black: #292929;
+$color-black: #121212;
 $color-white: #fff;
-$color-blue: #5DD7FF;
-$color-light-blue: #97DFF8;
-$color-beige: #F6DABE;
-$color-aqua: #E0F7FF;
-$color-brown: #E8BE94;
-$color-gray: #969696;
-$color-light-gray: #E7E7E7;
-$color-azure: #0CB9F2;
-$color-red: #FF3950;
+$color-darken-white: #F6F6F6;
+$color-blue: #2447ED;
+$color-light-blue: #CAFDFA;
+$color-gray: #838383;
+$color-light-gray: #E0E0E0;
+$color-light-green: #CAFDFA;
 
 $transition-timing-function: cubic-bezier(0.65, 0, 0.35, 1);
 $transition-duration: .5s;
