--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -4,7 +4,7 @@ doctype html
 html(lang='en')
   head
     meta(charset="UTF-8")
-    title Case__fly
+    title Irlen
     <!--[if IE]>
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     <![endif]-->
