--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -1,4 +1,5 @@
 include ../components/header
+include ../components/footer
 
 include ../components/svg
 
@@ -28,5 +29,6 @@ html(lang='en')
         block content
 
       block footer
+        +footer
 
     block scripts
