--- a/src/views/components/svg.pug
+++ b/src/views/components/svg.pug
@@ -26,3 +26,7 @@ mixin user-svg
   svg(class=attributes.class width='31' height='33' viewbox='0 0 31 33' fill='none' xmlns='http://www.w3.org/2000/svg')
     circle(cx='15.5' cy='6.73376' r='5.5' stroke='#121212' stroke-width='2')
     path(d='M25 31.2338H30V30.7338C30 22.7256 23.5081 16.2338 15.5 16.2338V16.2338C7.49187 16.2338 1 22.7256 1 30.7338V31.2338H6' stroke='#121212' stroke-width='2')
+
+mixin big-arrow-svg 
+  svg(class=attributes.class width='20' height='19' viewbox='0 0 20 19' fill='none' xmlns='http://www.w3.org/2000/svg')
+    path(d='M18.0435 1.248L17.8192 14.6896L14.7935 11.6639M18.0435 1.248L4.60185 1.47228L7.62757 4.49799M18.0435 1.248L1.34788 17.9436' stroke='white' stroke-width='2')
