--- a/src/views/components/navigation.pug
+++ b/src/views/components/navigation.pug
@@ -3,6 +3,11 @@ mixin navigation
     li.breadcrumbs__item 
       a.breadcrumbs__link(href="#") 
         |Главная
+    if(attributes.items)
+      each item in attributes.items
+        li.breadcrumbs__item 
+          .breadcrumbs__text 
+            |#{item}
     li.breadcrumbs__item 
       .breadcrumbs__text 
         |#{attributes.page}
