--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -41,7 +41,8 @@ mixin footer
                 .footer__contacts-label 
                   |#{item.city}
           .footer__btn 
-            |button
+            a.button.button--md(href="#") 
+              |Заказать звонок
       .footer__bot 
         .footer__bot-col
           .footer__bot-label 
