--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -13,7 +13,8 @@ mixin header
                 .header__label 
                   |#{item.city}
           .header__btn 
-            |button 
+            a.button.button--md(href="#") 
+              |Заказать звонок
         .header__bot
           .header__col
             .header__accordion
