--- a/src/views/pages/instruments-detail.pug
+++ b/src/views/pages/instruments-detail.pug
@@ -22,7 +22,14 @@ block content
         .section__block 
           .section__row 
             .section__col
+              +aside
             .section__col
               .instruments-page__container 
                 - for (i = 0; i < 12; i++)
                   +product-card
+              .section__button 
+                .button-show 
+                  .button-show__text 
+                    |Показать еще
+                  .button-show__icon 
+                    +arrow-svg
