--- a/src/views/pages/instruments-detail.pug
+++ b/src/views/pages/instruments-detail.pug
@@ -12,11 +12,12 @@ block content
         +navigation(items = ['Инструменты'] page='Пластины для точения')
     section.section.section--last
       .container 
-        .instruments-page__panel 
-          .instruments-page__panel-col
-            .instruments-page__panel-text 
+        .panel
+          .panel__col
+          .panel__col
+            .panel__text 
               |Твердосплавные пластины наиболее универсальны в использовании
-          .instruments-page__panel-col  
+          .panel__col  
             +button 
               |Материалы для скачивания
         .section__block 
