--- a/src/views/pages/instruments.pug
+++ b/src/views/pages/instruments.pug
@@ -23,8 +23,8 @@ block content
             - for (j = 0; j < 10; j++)
               a.instruments-page__card(href="#") 
                 .instruments-page__card-container 
-                  .instruments-page__card-icon 
-                    +big-arrow-svg.instruments-page__card-svg 
+                  .arrow-icon
+                    +big-arrow-svg.arrow-icon__svg 
                 .instruments-page__card-title 
                   |Пластины для точения
                 .instruments-page__card-text 
