--- a/src/assets/styles/modules/section.scss
+++ b/src/assets/styles/modules/section.scss
@@ -9,6 +9,15 @@
     margin-bottom: 100px;
   }
 
+  &--white {
+    background: $color-white;
+  }
+
+  &--table {
+    margin-top: 0;
+    padding-bottom: 100px;
+  }
+
   &__title {
     margin-bottom: 48px;
   }
