--- a/src/views/components/counter.pug
+++ b/src/views/components/counter.pug
@@ -1,5 +1,5 @@
 mixin counter 
-  .counter(data-max-count='5')
+  .counter(class=attributes.class data-max-count='5')
     .counter__item.counter__item--minus(data-count-minus='')
       .counter__icon 
         |-
