--- a/src/assets/styles/modules/counter.scss
+++ b/src/assets/styles/modules/counter.scss
@@ -1,8 +1,15 @@
 .counter {
+  $comp: &;
   $size: 50px;
 
   display: flex;
   align-items: center;
+
+  &--md {
+    #{$comp}__number {
+      width: 50px;
+    }
+  }
 
   &__item {
 
@@ -18,11 +25,11 @@
     transition: $transition;
 
     &:first-child {
-      border-radius: 14px 0 0 14px;
+      border-radius: 4px 0 0 4px;
     }
 
     &:last-child {
-      border-radius: 0 14px 14px 0;
+      border-radius: 0 4px 4px 0;
     }
   }
 
