--- a/src/assets/styles/pages/cart-page.scss
+++ b/src/assets/styles/pages/cart-page.scss
@@ -102,6 +102,15 @@
   &__card-btn {
     margin-top: 24px;
   }
+  &__card-list {
+    margin-bottom: 24px;
+  }
+  &__card-thing {
+
+    &:not(:first-child) {
+      margin-top: 12px;
+    }
+  }
 
   &__warning {
     padding: 12px 20px 12px 16px;
@@ -134,5 +143,100 @@
   }
   &__warning-text {
     @include fsl(12px, 140%);
+  }
+
+  &__top {
+    margin-bottom: 20px;
+  }
+  &__top-row {
+    display: flex;
+  }
+  &__top-col {
+    flex-shrink: 0;
+
+    &:nth-child(1) {
+      width: calc(#{$col-part-d} * 5);
+    }
+    &:nth-child(2) {
+      min-width: 150px;
+    }
+    &:nth-child(3) {
+      margin-left: 40px;
+      min-width: 80px;
+    }
+    &:nth-child(4) {
+      margin-left: 40px;
+    }
+  }
+  &__top-label {
+    text-transform: uppercase;
+    color: $color-gray;
+    @include fsl(12px, 120%);
+  }
+
+  &__item {
+    background: $color-white;
+    border-radius: 4px;
+
+    &:not(:first-child) {
+      margin-top: 8px;
+    }
+  }
+  &__item-row {
+    display: flex;
+  }
+  &__item-col {
+    flex-shrink: 0;
+
+    &:nth-child(1) {
+      width: calc(#{$col-part-d} * 5);
+      display: flex;
+    }
+    &:nth-child(3) {
+      margin-left: 40px;
+    }
+    &:nth-child(4) {
+      margin-left: 40px;
+    }
+    &:nth-child(5) {
+      padding: 20px 20px 20px 0;
+
+      flex-grow: 1;
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+  &__item-image {
+    display: flex;
+    align-items: center;
+    width: calc(#{$col-part-d});
+  }
+  &__item-container {
+    padding: 20px 0;
+  }
+  &__item-content {
+    margin-left: 40px;
+  }
+  &__item-text {
+    margin-bottom: 8px;
+  }
+  &__item-label {
+    color: $color-gray;
+    @include fsl(12px, 140%);
+  }
+  &__item-price {
+    line-height: 110%;
+    font-weight: 500;
+  }
+  &__item-old {
+    margin-top: 4px;
+    color: $color-gray;
+    @include fsl(12px, 110%);
+  }
+  &__item-icon {
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+    cursor: pointer;
   }
 }
