--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -2,6 +2,7 @@ extends ../layouts/master.pug
 
 include ../components/navigation
 include ../components/button
+include ../components/counter
 
 block content 
   .cart-page 
@@ -20,6 +21,49 @@ block content
                   |Действует программа лояльности
                 .cart-page__panel-text 
                   |#[a.cart-page__panel-link(href="#") Авторизуйтесь], чтобы узнать свой уровень цен.
+            .cart-page__top.margin-top.margin-top--md
+              .cart-page__top-row 
+                .cart-page__top-col
+                  .cart-page__top-label 
+                    |товар
+                .cart-page__top-col
+                  .cart-page__top-label 
+                    |количество
+                .cart-page__top-col
+                  .cart-page__top-label 
+                    |цена
+                .cart-page__top-col
+                  .cart-page__top-label 
+                    |итого
+            ul.cart-page__list  
+              - for (i = 0; i < 6; i++)
+                li.cart-page__item 
+                  .cart-page__item-row 
+                    .cart-page__item-col
+                      .cart-page__item-image 
+                        img(src="assets/images/product.jpg", alt="")
+                      .cart-page__item-container 
+                        .cart-page__item-content
+                          .cart-page__item-text 
+                            |Раскатник R-D TICN 376 ISO2X M14X2 2P
+                          .cart-page__item-label 
+                            |Артикул: 9353014BTC
+                    .cart-page__item-col
+                      .cart-page__item-container 
+                        +counter.counter--md
+                    .cart-page__item-col
+                      .cart-page__item-container 
+                        .cart-page__item-price 
+                          |€ 93.42
+                        .cart-page__item-old 
+                          |€ 103.55
+                    .cart-page__item-col
+                      .cart-page__item-container
+                        .cart-page__item-price 
+                          |€ 1279.2
+                    .cart-page__item-col
+                      .cart-page__item-icon 
+                        +trash-svg
           .cart-page__col 
             .cart-page__card 
               .cart-page__card-top
@@ -50,6 +94,23 @@ block content
                         .cart-page__card-text 
                           |1222.45
               .cart-page__card-bot
+                ul.cart-page__card-list
+                  li.cart-page__card-thing 
+                    .cart-page__card-row 
+                      .cart-page__card-col
+                        p 
+                          |Сумма без скидки, ₽
+                      .cart-page__card-col
+                        .cart-page__card-text 
+                          |- 109 906
+                  li.cart-page__card-thing 
+                    .cart-page__card-row 
+                      .cart-page__card-col
+                        p 
+                          |Скидка, ₽
+                      .cart-page__card-col
+                        .cart-page__card-text 
+                          |- 20 906
                 .cart-page__card-row 
                   .cart-page__card-col
                     .cart-page__card-price 
