--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -13,14 +13,14 @@ block content
       .container 
         .cart-page__row 
           .cart-page__col 
-            .cart-page__panel 
-              .cart-page__panel-icon 
+            .loyalty-card 
+              .loyalty-card__icon 
                 +warning-svg
-              .cart-page__panel-content 
-                .cart-page__panel-title 
+              .loyalty-card__content 
+                .loyalty-card__title 
                   |Действует программа лояльности
-                .cart-page__panel-text 
-                  |#[a.cart-page__panel-link(href="#") Авторизуйтесь], чтобы узнать свой уровень цен.
+                .loyalty-card__text 
+                  |#[a.loyalty-card__link(href="#") Авторизуйтесь], чтобы узнать свой уровень цен.
             .cart-page__top.margin-top.margin-top--md
               .cart-page__top-row 
                 .cart-page__top-col
