--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -5,6 +5,7 @@ include ../components/button
 include ../components/counter
 include ../components/category-card
 include ../components/slider-buttons
+include ../components/product-card
 
 
 block content 
@@ -97,20 +98,29 @@ block content
             +docs-card
     section.section 
       .container 
-        .instruments-card__row 
+        .instruments-card__row.instruments-card__inner
           h2 
             |Аналогичные товары
           .instruments-card__buttons  
-            +slider-buttons
-        .slider 
+            +slider-buttons(prev='3' next='4')
+        .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='2' data-slider-prev='3' data-slider-next='4')
+          .swiper-wrapper 
+            - for (i = 0; i < 12; i++)
+              .swiper-slide 
+                +product-card.product-card--responsive
     section.section.section--last 
       .container 
         .instruments-card__row.instruments-card__inner
           h2 
             |Сопутствующие категории товаров
           .instruments-card__buttons  
-            +slider-buttons
-        .slider 
-          +category-card(title = 'Cверлильно-фрезерные головки VDI' url = 'category-1.jpg')
-          +category-card(title = 'Резьбонарезные головки VDI' url = 'category-2.jpg')
-          +category-card(title = 'Токарные цанговые патроны' url = 'category-3.jpg')
+            +slider-buttons(prev='1' next='2')
+        .swiper-container.swiper-container--visible--mobile.swiper-container--slide-width-auto.swiper-container--slide-height-max(data-slider-id='1' data-slider-prev='1' data-slider-next='2')
+          .swiper-wrapper 
+            - for (i = 0; i < 3; i++)
+              .swiper-slide
+                +category-card(title = 'Cверлильно-фрезерные головки VDI' url = 'category-1.jpg')
+              .swiper-slide
+                +category-card(title = 'Резьбонарезные головки VDI' url = 'category-2.jpg')
+              .swiper-slide
+                +category-card(title = 'Токарные цанговые патроны' url = 'category-3.jpg')
