--- a/src/assets/styles/pages/instrument-card.scss
+++ b/src/assets/styles/pages/instrument-card.scss
@@ -17,12 +17,21 @@
   &__section-col {
     flex-shrink: 0;
     width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+
+    &:nth-child(2) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
   }
   &__section-breadcrumbs {
     margin-bottom: 30px;
   }
   &__section-slider {
     margin-bottom: 33px;
+  }
+  &__section-buttons {
+    margin-bottom: 45px;
   }
   &__section-info {
     margin-bottom: 52px;
@@ -50,6 +59,9 @@
   }
   &__section-text {
     @include fsl(16px, 140%);
+  }
+  &__section-img {
+    display: block;
   }
 
   &__price {
@@ -109,9 +121,11 @@
     width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
   }
   &__block-item {
-
     padding-bottom: 14px;
+
     display: flex;
+    justify-content: space-between;
+
     border-bottom: 1px solid $color-light-gray;
 
     &:not(:first-child) {
@@ -119,10 +133,9 @@
     }
   }
   &__block-text {
+    width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+
     @include fsl(14px, 140%);
-    &:nth-child(1) {
-      width: calc(#{$col-part-d} * 3);
-    }
   }
 
   &__image {
