--- a/src/views/pages/instruments-card-1.pug
+++ b/src/views/pages/instruments-card-1.pug
@@ -28,38 +28,30 @@ block content
                 .swiper-wrapper 
                   - for (i = 0; i < 6; i++)
                     .swiper-slide 
-                      img.instruments-card__section-img(src="assets/images/instrument-slide-1.jpg", alt="")
-                    .swiper-slide 
                       img.instruments-card__section-img(src="assets/images/instrument-slide-2.jpg", alt="")
+                    .swiper-slide 
+                      img.instruments-card__section-img(src="assets/images/instrument-slide-1.jpg", alt="")
             .instruments-card__section-buttons
               +slider-buttons.slider-buttons--small(prev = '13' next = '14')
           .instruments-card__section-col
             .instruments-card__section-info
               h1.instruments-card__section-title 
-                |Сверло 118N MM14.00 D1897 HSS Osawa
-              p.instruments-card__section-text 
-                |Серия 118N - сверхкороткие сверла общего применения из быстрорежущей стали.
+                |Патрон токарный трехкулачковый N206A5
               .instruments-card__section-inner.margin-top.margin-top--md 
                 .instruments-card__section-item 
                   .instruments-card__section-label 
                     |Артикул
                   .instruments-card__section-text 
-                    |P118N1275
+                    |N206A5
                 .instruments-card__section-item 
                   .instruments-card__section-label 
                     |наличие
                   .instruments-card__section-text 
-                    |10 шт.
+                    |2 шт.
               .instruments-card__price.margin-top.margin-top--md
                 .instruments-card__price-col
                   .instruments-card__price-price 
-                    |€ 17.79
-                  .instruments-card__price-old 
-                    |€ 20.55
-                .instruments-card__price-col
-                  .discont 
-                    .discont__text 
-                      |Распродажа
+                    |€ 2263.00
               .instruments-card__section-panel.margin-top.margin-top--md 
                 .loyalty-card.loyalty-card--small
                   .loyalty-card__icon 
@@ -75,7 +67,7 @@ block content
                   .instruments-card__bot-label 
                     |итого
                   .instruments-card__bot-num 
-                    |€ 345
+                    |€ 12334.90
                 .instruments-card__bot-col
                   +counter.counter--md
                 .instruments-card__bot-col
@@ -96,7 +88,7 @@ block content
                     |14.00мм
           .instruments-card__block-col
             .instruments-card__block-image 
-              img(src="assets/images/instruments-card.jpg", alt="")
+              img(src="assets/images/instruments-card-2.jpg", alt="")
     section.section 
       .container
         h2.instruments-card__inner
