--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -9,7 +9,7 @@ include ../components/product-card
 
 
 block content 
-  .instruments-card.docs-page 
+  .instruments-card
     section.instruments-card__section
       .container
         .instruments-card__section-row 
