--- a/src/views/pages/equip-detail.pug
+++ b/src/views/pages/equip-detail.pug
@@ -23,9 +23,9 @@ block content
             .equip-page__features-col
               h4.equip-page__features-title 
                 |Предназначен для выполнения следующего вида работ:
-              ul.equip-page__features-list
+              ul.features-list
                 each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
-                  li.equip-page__features-item
+                  li.features-list__item
                     |#{item}
             .equip-page__features-col
               h4.equip-page__features-title 
@@ -37,9 +37,9 @@ block content
             .equip-page__features-col
               h4.equip-page__features-title 
                 |Предназначен для выполнения следующего вида работ:
-              ul.equip-page__features-list
+              ul.features-list
                 each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
-                  li.equip-page__features-item
+                  li.features-list__item
                     |#{item}
             .equip-page__features-col
               h4.equip-page__features-title 
@@ -48,9 +48,9 @@ block content
                 |Как и все оборудование с числовым программным управлением, токарные станки этого типа работают практически автономно, что позволяет максимально оптимизировать производство.
               h4.equip-page__features-title 
                 |Вы можете приобрести станки:
-              ul.equip-page__features-list
+              ul.features-list
                 each item in ['Точение диаметральных размеров (внешних и внутренних);', 'Продольные проточки;', 'Точение фасонных и конических заготовок;', 'Отрезание заготовок по размерам;', 'Растачивание готовых отверстий;', 'Нанесение резьбы (метрической, дюймовой);', 'Токарные станки по металлу с ЧПУ отличаются высокой точностью обработки поверхностей и позволяют изготавливать детали с минимальными допусками.', ]
-                  li.equip-page__features-item
+                  li.features-list__item
                     |#{item}
     section.section.section--last 
       .container 
