--- a/src/assets/styles/helpers/utils.scss
+++ b/src/assets/styles/helpers/utils.scss
@@ -18,4 +18,8 @@
   grid-template-columns: repeat(var(--itemsCount), 1fr);
   column-gap: var(--gap);
   row-gap: var(--gap);
+
+  &--2 {
+    --itemsCount: 2;
+  }
 }
