--- a/src/assets/styles/modules/tabs.scss
+++ b/src/assets/styles/modules/tabs.scss
@@ -1,8 +1,28 @@
 .tabs {
+  $comp: &;
+  
   display: flex;
 
   background: $color-white;
   border-radius: 4px;
+
+  &--column {
+    flex-direction: column;
+
+    background: transparent;
+
+    #{$comp}__item {
+      background: $color-white;
+      
+      &:not(:first-child) {
+        margin-top: 8px;
+      }
+
+      &--active {
+        background: $color-blue;
+      }
+    }
+  }
 
   &__item {
     padding: 14px 24px;
