--- a/src/views/components/tabs.pug
+++ b/src/views/components/tabs.pug
@@ -1,5 +1,5 @@
 mixin tabs 
-  .tabs 
+  .tabs(class=attributes.class)
     each item, i in attributes.tabs 
       .tabs__item(class=(i === 0 ? 'tabs__item--active' : ''))
         |#{item}
