Add page profile

--- a/src/views/pages/main.pug
+++ b/src/views/pages/main.pug
@@ -15,7 +15,7 @@ block content
               .main-page__media-title 
                 |Каталог продукции
               .main-page__media-text 
-                |Станки и оборудование
+                |Станки с ЧПУ, ленточнопильные станки, шлифовальные станки, гидравлические прессы и прочее оборудование
           .main-page__media-col 
             a.main-page__media-link(href="#") 
               .main-page__media-container 
@@ -26,7 +26,7 @@ block content
               .main-page__media-title 
                 |Интернет-магазин
               .main-page__media-text 
-                |Инструмент и приспособления
+                |Режущий инструмент, вспомогательный инструмент, аксессуары для инструмента и приспособления
         .main-page__services 
           each item in data.services
             .main-page__services-item 
