--- a/src/views/pages/services-detail.pug
+++ b/src/views/pages/services-detail.pug
@@ -10,10 +10,10 @@ block content
         +navigation(items = ['Услуги'] page='Подбор инструмента')
     section.section.section--last
       .container 
-        .services-page__row 
-          .services-page__col
+        .row 
+          .row__col
             +tabs.tabs--column(tabs = ['Подбор инструмента', 'Ленточные пилы', 'Сервис', 'Инжиниринг', 'Обучение', 'Лизинг'])
-          .services-page__col
+          .row__col
             h2.services-page__title 
               |Высококвалифицированные консультации по подбору инструмента
             .services-page__image.margin-top
