--- a/src/assets/styles/pages/main-page.scss
+++ b/src/assets/styles/pages/main-page.scss
@@ -1,4 +1,5 @@
 .main-page {
+  $comp: &;
 
   &__intro {
     padding-top: 175px;
@@ -26,6 +27,21 @@
 
     display: flex;
     justify-content: space-between;
+
+    &--small {
+      margin-bottom: 0;
+      
+      #{$comp}__media-col {
+        width: calc(#{$col-part-d} * 4 - #{$col-gap-d});
+      }
+      #{$comp}__media-content {
+        margin-top: 12px;
+      }
+      #{$comp}__media-title {
+        margin-bottom: 4px;
+        @include fsl(24px, 120%);
+      }
+    }
   }
   &__media-col {
     flex-shrink: 0;
@@ -69,7 +85,7 @@
     @include fsl(40px, 100%);
   }
   &__media-text {
-    @include fsl(18px, 140%);
+    max-width: 450px;
   }
 
   &__services {
