--- a/src/assets/styles/helpers/helpers.scss
+++ b/src/assets/styles/helpers/helpers.scss
@@ -2,7 +2,7 @@
 
 $fs: 16px;
 
-$ff-main: 'DMSans', sans-serif;
+$ff-main: 'Formular', sans-serif;
 $ff-2: 'Agoka', sans-serif;
 $ff-3: 'BonVivant', sans-serif;
 
