--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -14,29 +14,29 @@
 //   font-display: swap;
 // }
 
-// @font-face {
-//   font-family: 'DMSans';
-//   src: url('../fonts/DMSans-Regular.woff') format("woff");
-//   font-weight: 400;
-//   font-style: normal;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Formular';
+  src: url('../fonts/Formular.woff') format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
-// @font-face {
-//   font-family: 'DMSans';
-//   src: url('../fonts/DMSans-Medium.woff') format("woff");
-//   font-weight: 500;
-//   font-style: normal;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Formular';
+  src: url('../fonts/Formular-Medium.woff') format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
 
-// @font-face {
-//   font-family: 'DMSans';
-//   src: url('../fonts/DMSans-Bold.woff') format("woff");
-//   font-weight: 700;
-//   font-style: normal;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Formular';
+  src: url('../fonts/Formular-Bold.woff') format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
 
 @import "_sprites";
